--- a/package.json
+++ b/package.json
@@ -47,23 +47,23 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "axios": "^0.17.1",
-    "bunyan": "^1.8.12",
-    "bunyan-winston-adapter": "^0.2.0",
-    "lodash": "^3.10.1",
-    "mongoose": "^5.0.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-infinite-scroller": "^1.1.3",
-    "react-redux": "4.3.0",
-    "react-router": "^2.0.1",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.0.4",
-    "redux-form": "^7.3.0",
-    "redux-promise": "^0.5.3",
-    "restify": "^4.3.0",
-    "restify-errors": "^4.3.0",
-    "winston": "^2.4.0"
+    "axios": "~0.17.1",
+    "bunyan": "~1.8.12",
+    "bunyan-winston-adapter": "~0.2.0",
+    "lodash": "~3.10.1",
+    "mongoose": "~5.0.1",
+    "react": "~0.14.3",
+    "react-dom": "~0.14.3",
+    "react-infinite-scroller": "~1.1.3",
+    "react-redux": "~4.3.0",
+    "react-router": "~2.0.1",
+    "react-router-dom": "~4.2.2",
+    "redux": "~3.0.4",
+    "redux-form": "~7.3.0",
+    "redux-promise": "~0.5.3",
+    "restify": "~4.3.0",
+    "restify-errors": "~4.3.0",
+    "winston": "~2.4.0"
   },
   "homepage": "https://github.com/icewassim/TFort#readme"
 }
