--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "axios": "~0.17.1",
     "bunyan": "~1.8.12",
     "bunyan-winston-adapter": "~0.2.0",
+    "cors": "^2.8.4",
     "lodash": "~3.10.1",
     "mongoose": "~5.0.1",
     "react": "~0.14.3",
@@ -62,6 +63,7 @@
     "redux-form": "~7.3.0",
     "redux-promise": "~0.5.3",
     "restify": "~4.3.0",
+    "restify-cors-middleware": "^1.1.0",
     "restify-errors": "~4.3.0",
     "winston": "~2.4.0"
   },
